<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <RelativeLayout
        android:id="@+id/serverSetupRl"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/bg_button_primary"
        android:focusable="true"
        android:visibility="gone"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center">

        <TextView
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/black_btn_color"
            android:textSize="@dimen/normal_txt"
            android:textStyle="bold"
            android:visibility="gone" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:visibility="gone"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_15sdp"
            android:text="@string/email_address"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:boxBackgroundColor="@android:color/transparent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:text="usama@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/password" />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="@dimen/_15sdp"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                style="@style/TextInputDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:clickable="false"
            android:orientation="horizontal"
            android:visibility="gone">


            <TextView
                android:id="@+id/tvFp"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:focusable="true"
                android:enabled="false"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="@dimen/_10sdp"
                android:text="@string/forgot_your_password"
                android:visibility="visible" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/bg_button_primary"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center">

            <TextView
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sign_in"
                android:textColor="@color/black_btn_color"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingBottom="@dimen/_5sdp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tv_not_account"
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/not_an_account"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <TextView
                style="@style/ButtonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_toEndOf="@+id/tv_not_account"
                android:text="@string/sign_up"
                android:enabled="false"
                android:textColor="@color/red_color"
                android:textStyle="bold"
                android:visibility="gone"
                />
        </RelativeLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_600sdp"
        android:layout_centerHorizontal="true"
        android:gravity = "bottom"
        android:visibility="gone" />

</RelativeLayout>